--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -111,14 +111,21 @@ macro(controller_test_run NAME NRITER)
   mc_rtc_add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=RUN -- ${CONFIG_OUT} ${ACTUALITER})
 endmacro()
 
+function(setup_test_log_fixture CTL_TEST LOG_TEST)
+  set_tests_properties(${CTL_TEST} PROPERTIES FIXTURES_SETUP ${CTL_TEST} FIXTURES_REQUIRED "${LOG_TEST}")
+  foreach(L_TEST ${LOG_TEST})
+    set_tests_properties(${L_TEST} PROPERTIES FIXTURES_CLEANUP ${L_TEST} FIXTURES_REQUIRED ${CTL_TEST})
+  endforeach()
+endfunction()
+
 controller_test_construction_failure(NotAController)
 controller_test_construction_failure(NoDestroyController)
 controller_test_construction_failure(NoCreateController)
 
 set(LOG_ENABLED "true")
 controller_test_run(TestPostureController 1000)
-# These tests require a /tmp LogDirectory and symlinks to access the
-# *-latest.log symlink created by mc_rtc
+
+# These tests do not work when building in a chroot such as during Debian packaging
 if(NOT DEFINED PYTHON_DEB_ROOT)
   set(UTILS_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR}/../../utils)
   if(CMAKE_CONFIGURATION_TYPES)
@@ -130,6 +137,7 @@ if(NOT DEFINED PYTHON_DEB_ROOT)
     set(NRITER 1000)
   endif()
   add_test(NAME TestPostureControllerLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} ${UTILS_BIN_DIR})
+  setup_test_log_fixture(TestPostureController TestPostureControllerLog)
 
   # Test threaded log policy
   set(LOG_POLICY "threaded")
@@ -145,8 +153,9 @@ if(NOT DEFINED PYTHON_DEB_ROOT)
   else()
     set(NRITER 1500)
   endif()
-  add_test(NAME TestPostureControllerThreadedLogging COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" ${NRITER})
+  add_test(NAME TestPostureControllerThreaded COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" ${NRITER})
   add_test(NAME TestPostureControllerThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} "${UTILS_BIN_DIR}")
+  setup_test_log_fixture(TestPostureControllerThreaded TestPostureControllerThreadedLog)
 
   # Test controller switch and threaded log policy
   add_library(TestPostureController2 SHARED TestPostureController2.cpp)
@@ -173,9 +182,10 @@ if(NOT DEFINED PYTHON_DEB_ROOT)
   else()
     set(NRITER 1200)
   endif()
-  mc_rtc_add_test(NAME TestPostureController2 COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" ${NRITER} TestPostureController2)
-  add_test(NAME TestPostureControllerControllerSwitchThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} "${UTILS_BIN_DIR}")
-  add_test(NAME TestPostureController2ControllerSwitchThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController2" ${NRITER} "${UTILS_BIN_DIR}")
+  mc_rtc_add_test(NAME TestControllerSwitch COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" ${NRITER} TestPostureController2)
+  add_test(NAME TestControllerSwitchLog1 COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} "${UTILS_BIN_DIR}")
+  add_test(NAME TestControllerSwitchLog2 COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController2" ${NRITER} "${UTILS_BIN_DIR}")
+  setup_test_log_fixture(TestControllerSwitch "TestControllerSwitchLog1;TestControllerSwitchLog2")
 endif()
 
 set(LOG_ENABLED "false")
@@ -401,6 +411,7 @@ if(PYTHON_BINDING)
     add_test(NAME "Test${PYTHON}Controller" COMMAND ${CMAKE_COMMAND} -E env "PYTHONPATH=${PYTHONPATH}${PATH_SEP}$ENV{PYTHONPATH}" ${CMAKE_COMMAND} -E env "${LDPATH_VAR}=${LDPATH}${PATH_SEP}${LDPATH_CONTROL}${PATH_SEP}$ENV{${LDPATH_VAR}}" $<TARGET_FILE:test_controller_ticker> --run_test=RUN -- "${CONFIG_OUT}" ${NRITER} "")
     if(NOT DEFINED PYTHON_DEB_ROOT)
       add_test(NAME Test${PYTHON}Log COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${TEST_CONTROLLER_NAME}" ${NRITER} "${UTILS_BIN_DIR}")
+      setup_test_log_fixture(Test${PYTHON}Controller Test${PYTHON}Log)
     endif()
   endforeach()
   unset(OBSERVER_PIPELINES)
