--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Build-Depends: debhelper (>= 9),
                libboost-filesystem-dev,
                libboost-program-options-dev,
                libboost-regex-dev,
+               libboost-stacktrace-dev,
                libboost-system-dev,
                libboost-test-dev,
                libboost-thread-dev,
