[mc_rtc] Correctly choose a Boost.Stacktrace variant

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,30 @@ option(MC_RTC_DEVELOPER_MODE "Disable exact version embedding to speed up recomp
 
 option(DISABLE_ROS "Build without ROS support (even if ROS was found)" OFF)
 
-add_project_dependency(Boost REQUIRED COMPONENTS filesystem timer stacktrace_backtrace)
+set(BOOST_STACKTRACE "")
+set(BOOST_USE_STACKTRACE_DEFINE "")
+function(find_best_boost_stacktrace)
+  set(stacktrace_variants backtrace addr2line basic)
+  if(TRUE OR WIN32)
+    list(PREPEND stacktrace_variants windbg)
+  endif()
+  foreach(variant ${stacktrace_variants})
+    find_package(Boost QUIET COMPONENTS stacktrace_${variant})
+    if(Boost_stacktrace_${variant}_FOUND)
+      set(BOOST_STACKTRACE stacktrace_${variant} PARENT_SCOPE)
+      set(BOOST_USE_STACKTRACE_DEFINE "boost_stacktrace_use_${variant}")
+      string(TOUPPER "${BOOST_USE_STACKTRACE_DEFINE}" BOOST_USE_STACKTRACE_DEFINE)
+      set(BOOST_USE_STACKTRACE_DEFINE "${BOOST_USE_STACKTRACE_DEFINE}" PARENT_SCOPE)
+      return()
+    endif()
+  endforeach()
+endfunction()
+find_best_boost_stacktrace()
+if(BOOST_STACKTRACE STREQUAL "")
+  message(FATAL_ERROR "No suitable Boost.Stacktrace installed, maybe you are missing some dependencies")
+endif()
+
+add_project_dependency(Boost REQUIRED COMPONENTS filesystem timer ${BOOST_STACKTRACE})
 add_project_dependency(Tasks REQUIRED)
 add_project_dependency(mc_rbdyn_urdf REQUIRED)
 if(NOT TARGET RBDyn::Parsers)
