[cmake] Don't search for stacktrace_windbg out of Windows
Also: no list(PREPEND) in Bionic CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,8 +65,8 @@ set(BOOST_STACKTRACE "")
 set(BOOST_USE_STACKTRACE_DEFINE "")
 function(find_best_boost_stacktrace)
   set(stacktrace_variants backtrace addr2line basic)
-  if(TRUE OR WIN32)
-    list(PREPEND stacktrace_variants windbg)
+  if(WIN32)
+    set(stacktrace_variants windbg ${stacktrace_variants})
   endif()
   foreach(variant ${stacktrace_variants})
     find_package(Boost QUIET COMPONENTS stacktrace_${variant})
