--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,11 +70,10 @@ function(find_best_boost_stacktrace)
   endif()
   foreach(variant ${stacktrace_variants})
     find_package(Boost QUIET COMPONENTS stacktrace_${variant})
-    if(Boost_stacktrace_${variant}_FOUND)
+    string(TOUPPER "${variant}" VARIANT)
+    if(Boost_stacktrace_${variant}_FOUND OR Boost_STACKTRACE_${VARIANT}_FOUND)
       set(BOOST_STACKTRACE stacktrace_${variant} PARENT_SCOPE)
-      set(BOOST_USE_STACKTRACE_DEFINE "boost_stacktrace_use_${variant}")
-      string(TOUPPER "${BOOST_USE_STACKTRACE_DEFINE}" BOOST_USE_STACKTRACE_DEFINE)
-      set(BOOST_USE_STACKTRACE_DEFINE "${BOOST_USE_STACKTRACE_DEFINE}" PARENT_SCOPE)
+      set(BOOST_USE_STACKTRACE_DEFINE "BOOST_STACKTRACE_USE_${VARIANT}" PARENT_SCOPE)
       return()
     endif()
   endforeach()
