[doc] Update tutorials layout
- Share as much code as possible with the default layout
- Correctly handle translation

--- a/doc/_i18n/en.yml
+++ b/doc/_i18n/en.yml
@@ -2,6 +2,8 @@ langs:
   jp: Japanese
 global:
   credits: Credits
+  next_tutorial: Next tutorial
+  back_to_tutorial: Back to tutorial
 nav:
   interfaces: Interfaces
   robots: Robots
