add mc-mujoco to list of interfaces

--- a/doc/_data/interfaces.yml
+++ b/doc/_data/interfaces.yml
@@ -34,3 +34,9 @@
   pkg:
     name: mc_udp
     url: https://github.com/jrl-umi3218/mc_udp
+- name: MuJoCo
+  url: https://mujoco.org/
+  icon: mujoco.png
+  pkg:
+    name: mc_mujoco
+    url: https://github.com/rohanpsingh/mc_mujoco
