[mc_rbdyn] Introduce Frame

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -183,6 +183,7 @@ mc_rbdyn/ZMP.cpp
 mc_control/generic_gripper.cpp
 mc_rbdyn/Device.cpp
 mc_rbdyn/BodySensor.cpp
+mc_rbdyn/Frame.cpp
 )
 
 set(mc_rbdyn_HDR
@@ -219,6 +220,7 @@ set(mc_rbdyn_HDR
 ../include/mc_rbdyn/ZMP.h
 ../include/mc_control/generic_gripper.h
 ../include/mc_rbdyn/Device.h
+../include/mc_rbdyn/Frame.h
 )
 
 add_library(mc_rbdyn SHARED ${mc_rbdyn_SRC} ${mc_rbdyn_HDR})
