[mc_rbdyn] Add RobotFrame

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -184,6 +184,7 @@ mc_control/generic_gripper.cpp
 mc_rbdyn/Device.cpp
 mc_rbdyn/BodySensor.cpp
 mc_rbdyn/Frame.cpp
+mc_rbdyn/RobotFrame.cpp
 )
 
 set(mc_rbdyn_HDR
@@ -221,6 +222,7 @@ set(mc_rbdyn_HDR
 ../include/mc_control/generic_gripper.h
 ../include/mc_rbdyn/Device.h
 ../include/mc_rbdyn/Frame.h
+../include/mc_rbdyn/RobotFrame.h
 )
 
 add_library(mc_rbdyn SHARED ${mc_rbdyn_SRC} ${mc_rbdyn_HDR})
