--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -366,7 +366,7 @@ install_mc_rtc_lib(mc_trajectory)
 set(mc_tasks_SRC
 mc_tasks/MomentumTask.cpp
 mc_tasks/PositionTask.cpp
-mc_tasks/SurfaceTransformTask.cpp
+mc_tasks/TransformTask.cpp
 mc_tasks/OrientationTask.cpp
 mc_tasks/VectorOrientationTask.cpp
 mc_tasks/EndEffectorTask.cpp
@@ -403,6 +403,7 @@ set(mc_tasks_HDR
 ../include/mc_tasks/VectorOrientationTask.h
 ../include/mc_tasks/PositionTask.h
 ../include/mc_tasks/SurfaceTransformTask.h
+../include/mc_tasks/TransformTask.h
 ../include/mc_tasks/RelativeEndEffectorTask.h
 ../include/mc_tasks/SmoothTask.h
 ../include/mc_tasks/SplineTrajectoryTask.h
