--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,11 +42,11 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-    - name: Temporary APT mirrors cleanup
-      if: startsWith(runner.os, 'Linux')
+    - name: Linux cleanup
+      if: matrix.os == 'ubuntu-18.04'
       run: |
         set -e
-        sudo rm -f /etc/apt/sources.list.d/dotnetdev.list /etc/apt/sources.list.d/microsoft-prod.list
+        echo "LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib/x86_64-linux-gnu/:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
     - name: macOS cleanup
       run: |
         sudo rm '/usr/local/bin/2to3'
