[mc_tasks|API break] VectorOrientationTask and co. accept RobotFrame
- Remove the API to set/get bodyVector

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -384,7 +384,7 @@ mc_tasks/GazeTask.cpp
 mc_tasks/PositionBasedVisServoTask.cpp
 mc_tasks/PostureTask.cpp
 mc_tasks/LookAtTask.cpp
-mc_tasks/LookAtSurfaceTask.cpp
+mc_tasks/LookAtFrameTask.cpp
 mc_tasks/MetaTaskLoader.cpp
 mc_tasks/lipm_stabilizer/StabilizerTask.cpp
 mc_tasks/lipm_stabilizer/StabilizerTask_log_gui.cpp
@@ -422,6 +422,8 @@ set(mc_tasks_HDR
 ../include/mc_tasks/PositionBasedVisServoTask.h
 ../include/mc_tasks/PostureTask.h
 ../include/mc_tasks/LookAtTask.h
+../include/mc_tasks/LookAtFrameTask.h
+../include/mc_tasks/LookAtSurfaceTask.h
 ../include/mc_tasks/lipm_stabilizer/StabilizerTask.h
 ../include/mc_tasks/lipm_stabilizer/Contact.h
 ../include/mc_tasks/lipm_stabilizer/ZMPCC.h
