[ci] Handle ubuntu-20.04 like ubuntu-18.04

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,7 @@ jobs:
         fi
     - name: Install dependencies
       uses: jrl-umi3218/github-actions/install-dependencies@master
-      if: matrix.build-type != 'script' && matrix.os != 'ubuntu-20.04'
+      if: matrix.build-type != 'script'
       with:
         compiler: ${{ matrix.compiler }}
         build-type: ${{ matrix.build-type }}
@@ -116,21 +116,21 @@ jobs:
           - path: jrl-umi3218/eigen-quadprog
           - path: jrl-umi3218/state-observation
     - name: Build and test
-      if: matrix.os != 'ubuntu-20.04' && matrix.build-type == 'RelWithDebInfo' || (matrix.build-type == 'Debug' && github.ref == 'refs/heads/master')
+      if: matrix.build-type == 'RelWithDebInfo' || (matrix.build-type == 'Debug' && github.ref == 'refs/heads/master')
       uses: jrl-umi3218/github-actions/build-cmake-project@master
       with:
         compiler: ${{ matrix.compiler }}
         build-type: ${{ matrix.build-type }}
         windows-options: -DPYTHON_BINDING:BOOL=OFF
     - name: Build and test (Debug/Fast tests)
-      if: matrix.os != 'ubuntu-20.04' && matrix.build-type == 'Debug' && github.ref != 'refs/heads/master'
+      if: matrix.build-type == 'Debug' && github.ref != 'refs/heads/master'
       uses: jrl-umi3218/github-actions/build-cmake-project@master
       with:
         compiler: ${{ matrix.compiler }}
         build-type: ${{ matrix.build-type }}
         options: '-DENABLE_FAST_TESTS:BOOL=ON'
     - name: Build with ROS
-      if: (matrix.os == 'ubuntu-18.04') && matrix.build-type != 'script'
+      if: (matrix.os == 'ubuntu-18.04' || matrix.os == 'ubuntu-20.04') && matrix.build-type != 'script'
       run: |
         set -e
         set -x
