[tests] Add a test for VectorOrientationTask

--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -212,6 +212,7 @@ controller_test_run(TestPBVSTaskController 1001)
 controller_test_run(TestPositionTaskController 5000)
 controller_test_run(TestOrientationTaskController 6001)
 controller_test_run(TestEndEffectorTaskController 4001)
+controller_test_run(TestVectorOrientationTaskController 2001)
 # mc_solver test controllers
 controller_test_run(TestCoMInBoxController 4001)
 
