[AddRemoveContactTask] Implement for TVM backend

--- a/src/mc_control/samples/FSM/etc/FSM.in.conf
+++ b/src/mc_control/samples/FSM/etc/FSM.in.conf
@@ -269,12 +269,9 @@
         "HeadPosture":
         {
           "type": "posture",
-          "stiffness": 0.0,
+          "stiffness": 5.0,
+          "activeJoints": ["NECK_Y", "NECK_P"],
           "weight": 50,
-          "jointGains": [
-            {"jointName": "NECK_Y", "stiffness": 5.0},
-            {"jointName": "NECK_P", "stiffness": 5.0}
-          ],
           "target": { "NECK_P": [-0.5] },
           "completion": { "OR": [ { "eval": 1e-3 },
                                   {"AND": [ { "timeout": 1.0 }, { "speed": 5e-3 } ] } ] }
