[Text] Make a TVM variant of this sample

--- a/src/mc_control/samples/Text/CMakeLists.txt
+++ b/src/mc_control/samples/Text/CMakeLists.txt
@@ -7,5 +7,7 @@ add_controller("text"
   "${CMAKE_CURRENT_SOURCE_DIR}/mc_text_controller.h"
 )
 
-install(FILES etc/Text.conf
+configure_file(etc/Text.conf "${CMAKE_CURRENT_BINARY_DIR}/etc/Text_TVM.conf")
+
+install(FILES etc/Text.conf "${CMAKE_CURRENT_BINARY_DIR}/etc/Text_TVM.conf"
   DESTINATION ${MC_CONTROLLER_RUNTIME_INSTALL_PREFIX}/etc/)
