--- a/src/mc_control/samples/Door/etc/DoorSample.in.yaml
+++ b/src/mc_control/samples/Door/etc/DoorSample.in.yaml
@@ -96,18 +96,17 @@ states:
         completion:
           AND:
             - eval: 0.05
-            - speed: 1e-4 
+            - speed: 1e-4
 
   Door::MoveHandle:
-    base: Posture 
+    base: Posture
     robot: door
     completion:
       eval: 0.01
     postureTask:
       weight: 100
-      jointGains:
-        - jointName: handle
-          stiffness: 50
+      activeJoints: [handle]
+      stiffness: 50
       target:
         handle: [-1.0]
     AddContacts:
@@ -119,11 +118,7 @@ states:
   Door::OpenDoor:
     base: Door::MoveHandle
     postureTask:
-      jointGains:
-        - jointName: handle
-          stiffness: 50
-        - jointName: door
-          stiffness: 50
+      activeJoints: [door, handle]
       target:
         handle: [-1.0]
         door: [-0.3]
