[LIPMStabilizer] Enable TVM backend

--- a/src/mc_control/samples/LIPMStabilizer/CMakeLists.txt
+++ b/src/mc_control/samples/LIPMStabilizer/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LIPMStabilizer_STATES_DESTINATION_PREFIX "${MC_STATES_RUNTIME_DESTINATION_PR
 set(LIPMStabilizer_STATES_DATA_DESTINATION_PREFIX "${MC_STATES_RUNTIME_DESTINATION_PREFIX}/data")
 set(LIPMStabilizer_INIT_STATE "Pause_2s")
 configure_file(etc/LIPMStabilizer.in.yaml "${CMAKE_CURRENT_BINARY_DIR}/etc/LIPMStabilizer.yaml")
+configure_file(etc/LIPMStabilizer.in.yaml "${CMAKE_CURRENT_BINARY_DIR}/etc/LIPMStabilizer_TVM.yaml")
 
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/etc/LIPMStabilizer.yaml"
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/etc/LIPMStabilizer.yaml" "${CMAKE_CURRENT_BINARY_DIR}/etc/LIPMStabilizer_TVM.yaml"
   DESTINATION "${MC_CONTROLLER_RUNTIME_INSTALL_PREFIX}/etc")
