[tests] Test Meta state continuity

--- a/tests/fsm_states/CMakeLists.txt
+++ b/tests/fsm_states/CMakeLists.txt
@@ -21,3 +21,4 @@ endmacro()
 add_fsm_test_state(SingleState)
 add_fsm_test_state(MultipleStates)
 add_fsm_test_state(ConfigureState)
+add_fsm_test_state(TestMetaContinuity)
