--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -225,6 +225,10 @@ endif()
 controller_test_run(TestFSMStateOptions 100)
 target_link_libraries(TestFSMStateOptions PUBLIC mc_control_fsm)
 
+set(FSM_TEST_STATES_DIR "${CMAKE_BINARY_DIR}/tests/fsm_states/TestMetaContinuity")
+controller_test_run(TestFSMMetaContinuity 20)
+target_link_libraries(TestFSMMetaContinuity PUBLIC mc_control_fsm)
+
 set(ENABLED_OBSERVERS "\"Encoder\", \"BodySensor\", \"KinematicInertial\"")
 set(RUN_OBSERVERS "\"Encoder\", \"BodySensor\"")
 set(UPDATE_OBSERVERS "\"Encoder\"")
