--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -188,6 +188,16 @@ jobs:
         git commit -m "Website from commit ${GITHUB_SHA}"
         git push origin gh-pages
         popd
+    - name: Debug Windows DLL issue
+      if: failure() && matrix.os == 'windows-latest'
+      shell: bash
+      run: |
+        set -e
+        pwd
+        echo $PATH
+        ls
+        ldd build/tests/RelWithDebInfo/testGUIStateBuilder.exe
+        ldd build/tests/RelWithDebInfo/testDataStore.exe
     - name: Slack Notification
       if: failure()
       uses: archive/github-actions-slack@master
