[FSM] Add EnableController state

--- a/src/mc_control/fsm/states/CMakeLists.txt
+++ b/src/mc_control/fsm/states/CMakeLists.txt
@@ -46,6 +46,7 @@ add_fsm_state_simple(SlidingFootContact)
 add_fsm_state_simple(Meta)
 add_fsm_state_simple(Parallel)
 add_fsm_state_simple(StabilizerStandingState)
+add_fsm_state_simple(EnableController)
 
 # PythonState
 if(${PYTHON_BINDING})
