--- a/debian/control
+++ b/debian/control
@@ -28,11 +28,13 @@ Build-Depends: debhelper (>= 9),
                python-dev,
                python-enum34,
                python-nose,
+               python-pytest,
                python-setuptools,
                cython,
                python3-all,
                python3-dev,
                python3-nose,
+               python3-pytest,
                python3-setuptools,
                cython3,
                python-tasks,
