--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,12 +82,12 @@ jobs:
         compiler: ${{ matrix.compiler }}
         build-type: ${{ matrix.build-type }}
         ubuntu: |
-          apt: cython cython3 python-nose python3-nose python-numpy python3-numpy python-coverage python3-coverage python-setuptools python3-setuptools libeigen3-dev doxygen doxygen-latex libboost-all-dev libtinyxml2-dev libgeos++-dev libnanomsg-dev libyaml-cpp-dev libltdl-dev
+          apt: cython cython3 python-nose python-pytest python3-nose python3-pytest python-numpy python3-numpy python-coverage python3-coverage python-setuptools python3-setuptools libeigen3-dev doxygen doxygen-latex libboost-all-dev libtinyxml2-dev libgeos++-dev libnanomsg-dev libyaml-cpp-dev libltdl-dev
         macos: |
           brew: eigen boost tinyxml2 geos nanomsg yaml-cpp pkg-config libtool gcc
-          pip: Cython coverage nose numpy
+          pip: Cython coverage nose numpy pytest
         windows: |
-          pip: Cython coverage nose numpy
+          pip: Cython coverage nose numpy pytest
           github:
             - path: eigenteam/eigen-git-mirror
               ref: 3.3.7
