Move ROS headers to dedicated folders
- Simplify Debian packaging files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,10 @@ set(PROJECT_URL https://gite.lirmm.fr/multi-contact/mc_rtc)
 set(PROJECT_DEBUG_POSTFIX "_d")
 set(PROJECT_USE_KEYWORD_LINK_LIBRARIES TRUE)
 set(PROJECT_USE_CMAKE_EXPORT TRUE)
+set(PROJECT_CUSTOM_HEADER_DIR "mc_rtc/macros")
+set(PROJECT_CUSTOM_HEADER_EXTENSION "h")
+set(PROJECT_GENERATED_HEADERS_SKIP_CONFIG ON)
+set(PROJECT_GENERATED_HEADERS_SKIP_WARNING ON)
 
 set(DOXYGEN_USE_MATHJAX "YES")
 set(CXX_DISABLE_WERROR 1)
