--- a/plugins/ROS/CMakeLists.txt
+++ b/plugins/ROS/CMakeLists.txt
@@ -28,24 +28,26 @@ if(NOT ${ROSCPP_FOUND})
 endif()
 
 set(mc_rtc_ros_SRC src/mc_rtc_ros/ros.cpp)
-set(mc_rtc_ros_HDR include/mc_rtc/ros.h include/mc_rtc/ros_api.h)
+set(mc_rtc_ros_HDR include/mc_rtc_ros/ros.h include/mc_rtc_ros/api.h)
 add_library(mc_rtc_ros SHARED ${mc_rtc_ros_SRC} ${mc_rtc_ros_HDR})
 set_target_properties(mc_rtc_ros PROPERTIES COMPILE_FLAGS "-DMC_RTC_ROS_EXPORTS")
 target_link_libraries(mc_rtc_ros PUBLIC mc_rtc::mc_rbdyn mc_rtc_3rd_party::ROS)
 target_include_directories(mc_rtc_ros PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
 set_target_properties(mc_rtc_ros PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR} VERSION ${PROJECT_VERSION})
-install(FILES ${mc_rtc_ros_HDR} DESTINATION include/mc_rtc)
+install(FILES ${mc_rtc_ros_HDR} DESTINATION include/mc_rtc_ros)
+install(FILES include/mc_rtc/ros.h DESTINATION include/mc_rtc)
 
 set(mc_tasks_ros_SRC
-  src/mc_tasks/LookAtTFTask.cpp)
+  src/mc_tasks_ros/LookAtTFTask.cpp)
 set(mc_tasks_ros_HDR
-  include/mc_tasks/LookAtTFTask.h
-  include/mc_tasks/ros_api.h)
+  include/mc_tasks_ros/LookAtTFTask.h
+  include/mc_tasks_ros/api.h)
 add_library(mc_tasks_ros SHARED ${mc_tasks_ros_SRC} ${mc_tasks_ros_HDR})
 set_target_properties(mc_rtc_ros PROPERTIES COMPILE_FLAGS "-DMC_TASKS_ROS_EXPORTS")
 target_link_libraries(mc_tasks_ros PUBLIC mc_rtc_ros mc_rtc::mc_tasks)
 set_target_properties(mc_tasks_ros PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR} VERSION ${PROJECT_VERSION})
-install(FILES ${mc_tasks_ros_HDR} DESTINATION include/mc_tasks)
+install(FILES ${mc_tasks_ros_HDR} DESTINATION include/mc_tasks_ros)
+install(FILES include/mc_tasks/LookAtTFTask.h DESTINATION include/mc_tasks)
 
 set(mc_bin_to_rosbag_SRC
   utils/mc_bin_to_rosbag.cpp
