Handle when Python is not on the system

--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -14,6 +14,13 @@ else()
   set(LOG_DIRECTORY "/tmp")
 endif()
 
+find_program(PYTHON python3 NAMES python python2)
+macro(AddLogTest NAME CTL_NAME NRITER UTILS_BIN_DIR)
+  if(PYTHON)
+    add_test(NAME "${NAME}" COMMAND "${PYTHON}" "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${CTL_NAME}" "${UTILS_BIN_DIR}")
+  endif()
+endmacro()
+
 macro(mc_rtc_add_test)
 cmake_parse_arguments(MC_RTC_TEST "" "NAME;COMMAND" "" ${ARGN} )
 string(REPLACE ";" " " CMD_ARGS "${MC_RTC_TEST_UNPARSED_ARGUMENTS}") #Not robust to having ';' inside an arg. Could use list(JOIN ...) in CMake>=3.12
@@ -126,6 +133,11 @@ macro(controller_test_run NAME NRITER)
 endmacro()
 
 function(setup_test_log_fixture CTL_TEST LOG_TEST)
+  foreach(L_TEST ${LOG_TEST})
+    if(NOT TEST ${L_TEST})
+      return()
+    endif()
+  endforeach()
   set_tests_properties(${CTL_TEST} PROPERTIES FIXTURES_SETUP ${CTL_TEST} FIXTURES_REQUIRED "${LOG_TEST}")
   foreach(L_TEST ${LOG_TEST})
     set_tests_properties(${L_TEST} PROPERTIES FIXTURES_CLEANUP ${L_TEST} FIXTURES_REQUIRED ${CTL_TEST})
@@ -150,7 +162,7 @@ if(NOT DEFINED PYTHON_DEB_ROOT)
   else()
     set(NRITER 1000)
   endif()
-  add_test(NAME TestPostureControllerLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} ${UTILS_BIN_DIR})
+  AddLogTest(TestPostureControllerLog "TestPostureController" ${NRITER} ${UTILS_BIN_DIR})
   setup_test_log_fixture(TestPostureController TestPostureControllerLog)
 
   # Test threaded log policy
@@ -168,7 +180,7 @@ if(NOT DEFINED PYTHON_DEB_ROOT)
     set(NRITER 1500)
   endif()
   add_test(NAME TestPostureControllerThreaded COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" ${NRITER})
-  add_test(NAME TestPostureControllerThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} "${UTILS_BIN_DIR}")
+  AddLogTest(TestPostureControllerThreadedLog "TestPostureController" ${NRITER} "${UTILS_BIN_DIR}")
   setup_test_log_fixture(TestPostureControllerThreaded TestPostureControllerThreadedLog)
 
   # Test controller switch and threaded log policy
@@ -197,8 +209,8 @@ if(NOT DEFINED PYTHON_DEB_ROOT)
     set(NRITER 1200)
   endif()
   mc_rtc_add_test(NAME TestControllerSwitch COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" ${NRITER} TestPostureController2)
-  add_test(NAME TestControllerSwitchLog1 COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController" ${NRITER} "${UTILS_BIN_DIR}")
-  add_test(NAME TestControllerSwitchLog2 COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController2" ${NRITER} "${UTILS_BIN_DIR}")
+  AddLogTest(TestControllerSwitchLog1 "TestPostureController" ${NRITER} "${UTILS_BIN_DIR}")
+  AddLogTest(TestControllerSwitchLog2 "TestPostureController2" ${NRITER} "${UTILS_BIN_DIR}")
   setup_test_log_fixture(TestControllerSwitch "TestControllerSwitchLog1;TestControllerSwitchLog2")
 endif()
 
@@ -440,7 +452,7 @@ if(PYTHON_BINDING)
     endif()
     add_test(NAME "Test${PYTHON}Controller" COMMAND ${CMAKE_COMMAND} -E env "PYTHONPATH=${PYTHONPATH}${PATH_SEP}$ENV{PYTHONPATH}" ${CMAKE_COMMAND} -E env "${LDPATH_VAR}=${LDPATH}${PATH_SEP}${LDPATH_CONTROL}${PATH_SEP}$ENV{${LDPATH_VAR}}" $<TARGET_FILE:test_controller_ticker> --run_test=RUN -- "${CONFIG_OUT}" ${NRITER} "")
     if(NOT DEFINED PYTHON_DEB_ROOT)
-      add_test(NAME Test${PYTHON}Log COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "${TEST_CONTROLLER_NAME}" ${NRITER} "${UTILS_BIN_DIR}")
+      AddLogTest(Test${PYTHON}Log "${TEST_CONTROLLER_NAME}" ${NRITER} "${UTILS_BIN_DIR}")
       setup_test_log_fixture(Test${PYTHON}Controller Test${PYTHON}Log)
     endif()
   endforeach()
