--- a/tests/controllers/mc_rtc.conf.in
+++ b/tests/controllers/mc_rtc.conf.in
@@ -1,6 +1,6 @@
 // This configuration file is used to run controller tests
 {
-  "MainRobot" : "JVRC1",
+  "MainRobot" : "JVRC1NoHands",
 
   "Enabled"   : ["@TEST_CONTROLLER_NAME@"],
 
